# dns-01.online

./: LICENSE  README.md  put-token.sh
dns-01-web/: Cargo.toml  Rocket.toml  dns-01.online.zone
dns-01-web/src/: api.rs  auth.rs  control.rs  database.rs  main.rs  models.rs
dns-01-web/templates/: about.html.tera  apierror.json.tera  apirecord.json.tera  dns-01.online.txt.tera  index.html.tera  layout.html.tera  login.html.tera  overview.html.tera  register.html.tera  usage.html.tera
mysql/: database_tables.sql
named/: named.conf.local  named.conf.options
named/master/: dns-01.online.zone  named.conf.local
named/slave/: named.conf.local
nginx/: api.dns-01.online.conf  dns-01.online.conf
