[package]
name = "dns-01-web"
version = "0.1.0"
authors = ["Mathias Pius Damm-Pedersen <contact@pius.io>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
chrono = "0.4.0"
regex = "0.2"
rand = "0.4"
rust-crypto = "0.2.36"
mysql = "12.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]
